<resources>
    <string name="agora_app_id">68ba2e8a9d034c0fa50267a13c3a7122</string>
    <string name="app_name">HouseMaid</string>
    <string name="i_want_job">I Want Job</string>
    <string name="i_want_maid">I Want a Maid</string>
    <string name="i_am_agency">I am Agency</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_without_sign_up">Continue Without Sign In</string>
    <string name="user_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="password_character">Password (At least 8 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show">Show</string>
    <string name="i_accept_terms_and_conditions_of_the_app">I accept Terms &amp; Conditions</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="next">Next</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_otp_sent_on_your_mobile_number">Please enter OTP sent on your mobile number</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="please_enter_old_password_or_new_password">Please enter new password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="re_enter_your_new_password">Confirm your new password</string>
    <string name="your_password_has_been">Your password has been</string>
    <string name="changed_successfully">changed successfully</string>
    <string name="please_upload_image">Please Upload Image</string>
    <string name="previous_step">Previous Step</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="avatar">Avatar</string>
    <string name="please_complete_your_profile">Please complete your profile</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="by_credit">Buy Credits</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="nationality">Nationality</string>
    <string name="marital_status">Marital Status</string>
    <string name="kids_status">Kids Status</string>
    <string name="hijob">Hijab</string>
    <string name="education">Education</string>
    <string name="spoken_languages">Languages</string>
    <string-array name="smoke">
        <item>I smoke</item>
        <item>I do not smoke</item>
        <item>I smoke sometimes</item>
    </string-array>
    <string name="please_choose_your_pet_problem">Choose Your Pet Problem</string>
    <string name="certificate">Certificate</string>
    <string name="about_me">About Me</string>
    <string name="work_experience">Work Experience</string>
    <string name="type_here">Type Here</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="still_working">Still Working</string>
    <string name="add">Add</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="hide_my_photo_and_email">Hide My Phone and Email</string>
    <string name="application_permission">Application Permission</string>
    <string name="_03_06_2017">03/06/2017</string>
    <string name="_03_06_2018">03/06/2018</string>
    <string name="previous">Previous</string>
    <string name="business_preferences">Business Preferences</string>
    <string name="washington_d_c_district_of_columbia">Washington, D.C. District of Columbia</string>
    <string name="job_choice">Job Choice</string>
    <string name="full_day">Full Day</string>
    <string name="i_can_live_with_family">Stay With Family</string>
    <string name="travel_situation">Travel Situation</string>
    <string name="yes">Yes</string>
    <string name="expected_fee">Expected Fee</string>
    <string name="_10000">10000</string>
    <string name="skills">Skills</string>
    <string name="_0_3_years_baby_care_cleaning_garden">0–3 Years Baby Care,Cleaning</string>
    <string name="allow_housemaid_to_access_your_location">Allow Housemaid to access your location</string>
    <string name="while_using_the_app_or_enter_location">while using the app. Or enter location</string>
    <string name="manually">manually.</string>
    <string name="enable_location">Enable Location</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="name_digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ ÇĞİÖŞÜ çğöşü ğğĞĞççCCııIIiiİİööÖÖŞŞşşüüÜÜ 0123456789 !@#$%^*()":;,.='/\|{}[]-_+ &amp;</string>
    <string name="india">India</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="language">Language </string>
    <string name="english">English</string>
    <string name="_12_nov_2018_2_50_pm">12 Nov 2018, 2:50 pm</string>
    <string name="favorite">Favourite</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="jhon_doe">Jhon Doe</string>
    <string name="lorem_ipsum_sit_amet_consectetur_adipiscing_do_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_at_eiusmod_dolcre_magna_alique">Lorem Ipsum sit amet, consectetur adipiscing do elit,</string>
    <string name="listings">Listings</string>
    <string name="sector_65_noida">Sector 65, Noida</string>
    <string name="i_want_baby_care">I Want Baby Care</string>
    <string name="sign_up_underline">Sign Up</string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="items">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow</item>
        <item>Living separately</item>
        <item>Unmarried</item>
    </string-array>
    <string-array name="workStatus">
        <item>Working</item>
        <item>Part time working</item>
        <item>Not working</item>
    </string-array>
    <string-array name="workStatusFilter">

        <item>Work Status</item>
        <item>Working</item>
        <item>Part time working</item>
        <item>Not working</item>
    </string-array>
    <string-array name="drivingLicence">

        <item>Yes, I am driving</item>
        <item>Yes, I am not driving</item>
        <item>No</item>
    </string-array>
    <string-array name="drivingLicenceFilter">
        <item>Driving Licence</item>
        <item>Yes, I am driving</item>
        <item>Yes, I am not driving</item>
        <item>No</item>
    </string-array>
    <string-array name="smokeFilter">
        <item>Smoke</item>
        <item>I smoke</item>
        <item>I do not smoke</item>
        <item>I smoke sometimes</item>
    </string-array>
    <string name="alcohol">Alcohol</string>
    <string-array name="alcoholFilter">
        <item>Alcohol</item>
        <item>I drink</item>
        <item>I do not drink</item>
        <item>I drink sometimes</item>
    </string-array>
    <string-array name="maritalStatus">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow</item>
        <item>Living separately</item>
        <item>Unmarried</item>
    </string-array>
    <string-array name="maritalStatusFilter">
        <item>Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow</item>
        <item>Living separately</item>
        <item>Unmarried</item>
    </string-array>
    <string-array name="kidStatus">
        <item>No</item>
        <item>Yes, lives with me</item>
        <item>Yes, lives separately</item>
    </string-array>
    <string-array name="kidStatusFilter">
        <item>Kid Status</item>
        <item>No</item>
        <item>Yes, lives with me</item>
        <item>Yes, lives separately</item>
    </string-array>
    <string name="experience">Experience</string>
    <string-array name="experienceFilter">
        <item>Experience</item>
        <item>0–6 month</item>
        <item>7–12 month</item>
        <item>1 year</item>
        <item>2 year</item>
        <item>greater than 2 year</item>
    </string-array>
    <string name="hijab">Hijab</string>
    <string-array name="hijabFilter">
        <item>Hijab</item>
        <item>Yes</item>
        <item>No</item>
        <item>Optional</item>
    </string-array>
    <string-array name="Family">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="FamilyFilter">
        <item>Family</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="TravelSituation">
        <item>Yes</item>
        <item>No matter</item>
        <item>No</item>
    </string-array>
    <string-array name="amount">
        <item>Currency</item>
        <item>$</item>
        <item>€</item>
        <item>₺</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age_range">Age Range</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="ratings">Ratings</string>
    <string name="search">Search</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="state_where_i_can_work">State where I can work</string>
    <string name="district_where_i_can_work">District where I can work</string>
    <string name="add_an_listing_is_25_credit">Add an listing is Credit</string>
    <string name="your_current_credit">Your current credit: </string>
    <string name="buy_credits">Buy credits</string>
    <string name="cancel">Cancel</string>
    <string name="add_maid">Add Maid</string>
    <string name="your_listing_will_be_reviewed_by_our_editors">Your listing will be reviewed by our editors</string>
    <string name="your_maid_will_be_reviewed_by_our_editors">Your maid will be reviewed by our editors</string>
    <string name="and_your_listing_will_not_be_activated">and your listing will not be activated</string>
    <string name="and_your_maid_will_not_be_activated">and your maid will not be activated</string>
    <string name="if_it_violates_our_rules">if it violates our rules.</string>
    <string name="after_the_listing_is_activated">After the listing is activated</string>
    <string name="after_the_maid_is_activated">After the maid is activated</string>
    <string name="_25_credits_will_be_deducted_from_your_account">credits will be deducted from your account</string>
    <string name="no_data_found">No data found.</string>
    <string name="you_have_to_pay">You have to pay </string>
    <string name="credit"> credits.</string>
    <string name="your_current_credits">Your current credits:</string>
    <string name="successful">Successful</string>
    <string name="credits_will_be_deducted_from_your_account">credits will be deducted from your account</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="return_to_main_screen">Return to Main Screen</string>
    <string name="add_new_listing">Add New Listing</string>
    <string name="select_listing_type">Select Listing Type</string>
    <string name="pay">Pay</string>
</resources>