<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.housemaid.activities.ChangePasswordActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_header" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/otp" />

        <com.housemaid.utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:text="@string/please_enter_old_password_or_new_password"
            android:textColor="@color/colorDarkGrey"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:orientation="vertical">


            <com.housemaid.utils.MyEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_black"
                android:hint="@string/enter_your_new_password"
                android:inputType="textPassword"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorDarkGrey"
                android:textSize="15sp" />

            <com.housemaid.utils.MyEditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_black"
                android:hint="@string/re_enter_your_new_password"
                android:inputType="textPassword"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/colorDarkGrey"
                android:textSize="15sp" />


            <com.housemaid.utils.MyButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_blue"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="17sp"
                />
        </LinearLayout>

    </RelativeLayout>

        </ScrollView>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
           android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</layout>
